# crawk

./: .cargo-crap.toml  .envrc  .gitignore  .pre-commit-config.yml  .release-plz.toml  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml  deny.toml  flake.nix  justfile
.config/: insta.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check.yml  coverage.yml  release-binaries.yml  release.yml  zizmor.yml
fixtures/bin_only/: Cargo.toml
fixtures/bin_only/src/: config.rs  main.rs
fixtures/broken_syntax/: Cargo.toml
fixtures/broken_syntax/src/: broken.rs  lib.rs
fixtures/cycles/: Cargo.toml
fixtures/cycles/src/: alpha.rs  beta.rs  delta.rs  gamma.rs  lib.rs  standalone.rs
fixtures/glob_fallback/: Cargo.toml
fixtures/glob_fallback/src/: importer.rs  lib.rs
fixtures/modules/: Cargo.toml
fixtures/modules/src/: advanced_globs.rs  baz.rs  custom_path.rs  file_module.rs  glob_showcase.rs  group_patterns.rs  item_visibility.rs  lib.rs  uses_empty_glob.rs
fixtures/modules/src/foo/: bar.rs  (+2 more)
fixtures/modules/tests/: helpers.rs  integration.rs
fixtures/paths/: Cargo.toml
fixtures/paths/src/: a.rs  b.rs  deep.rs  deep_a.rs  deep_b.rs  leaf_via_a.rs  lib.rs
fixtures/workspace/lib-b/: Cargo.toml
modules/src/: app.rs  custom_path_target.rs  empty_module.rs  glob_patterns.rs  inline_modules.rs  lib.rs  no_pub_items.rs
modules/src/dir_module/: mod.rs
modules/src/mixed/: file_child.rs  mod.rs
modules/src/nesting/: mod.rs
modules/src/reexports/: internal.rs  mod.rs  types.rs
modules/src/visibility/: pub_crate_mod.rs
src/: analyzer.rs  build.rs  cache.rs  cli.rs  collector.rs  constants.rs  consts.rs  error.rs  expansion.rs  formatter.rs  lib.rs  logger.rs  main.rs  model.rs  parser.rs  reference.rs  resolve.rs  resolver.rs  utils.rs  version.rs  visitor.rs
src/analysis/: collect.rs  mod.rs
src/cli/: mod.rs  overview.rs  validation.rs
src/discover/: mod.rs  module_tree.rs
src/format/: cycles.rs  deps.rs  deps_cmd.rs  flat.rs  grouped.rs  list.rs  list_cmd.rs  mod.rs  orphans.rs  paths.rs  use_cmd.rs  why_cmd.rs
src/graph/: cycles.rs  edges.rs  mod.rs  orphans.rs  paths.rs
src/module/: analyzer.rs  discover.rs  expand.rs  locate.rs  mod.rs  path.rs  resolve.rs
src/parser/: mod.rs  visitor.rs
tests/: mod.rs
tests/common/: command.rs  help.rs  mod.rs  test.rs
tests/int/: command.rs  error_cases.rs  mod.rs  use_command.rs  verbosity.rs  version.rs
tests/int/deps_command/: basic.rs  bin_only.rs  cycles.rs  depth.rs  error_cases.rs  format.rs  mod.rs  orphans.rs  overview.rs  paths.rs
tests/int/list_command/: basic.rs  bin_only.rs  error_cases.rs  filter.rs  flags.rs  mod.rs  multi_target.rs  overview.rs  test_targets.rs
tests/int/snapshots/: integration__int__command__flag_h.snap  integration__int__command__flag_help.snap  integration__int__command__should_command_overview_match.snap  integration__int__error_cases__should_fail_with_file_as_path.snap  integration__int__error_cases__should_fail_with_nonexistent_path.snap  integration__int__error_cases__should_fail_with_unknown_subcommand.snap  integration__int__error_cases__should_fail_with_workspace_root.snap  integration__int__use_command__flag_h.snap  integration__int__use_command__flag_help.snap  integration__int__use_command__module_build_flags_r_t.snap  integration__int__use_command__module_build_flags_r_t_e_G.snap  integration__int__use_command__module_build_flags_r_t_e_g_G.snap  integration__int__use_command__module_build_flags_t.snap  integration__int__use_command__module_build_flags_t_e.snap  integration__int__use_command__module_build_flags_t_e_d_1.snap  integration__int__use_command__module_cli_flags_r.snap  integration__int__use_command__module_cli_flags_r_t_e_G.snap  integration__int__use_command__module_cli_flags_r_t_e_g_G.snap  integration__int__use_command__module_cli_flags_t.snap  integration__int__use_command__module_constants_flags_r_t_e_g_G.snap  integration__int__use_command__module_crawk_flags_r_t.snap  integration__int__use_command__module_crawk_flags_r_t_e.snap  integration__int__use_command__module_crawk_flags_r_t_e_G.snap  integration__int__use_command__module_crawk_flags_r_t_e_g_G.snap  integration__int__use_command__module_crawk_flags_t.snap  integration__int__use_command__module_crawk_flags_t_e.snap  integration__int__use_command__module_crawk_flags_t_e_d_1.snap  integration__int__use_command__module_lib_flags_r.snap  integration__int__use_command__module_lib_flags_r_t.snap  integration__int__use_command__module_lib_flags_r_t_e.snap  integration__int__use_command__module_lib_flags_r_t_e_G.snap  integration__int__use_command__module_lib_flags_r_t_e_g_G.snap  integration__int__use_command__module_lib_flags_t.snap  integration__int__use_command__module_lib_flags_t_e.snap  integration__int__use_command__module_logger_flags_r_t.snap  integration__int__use_command__module_logger_flags_r_t_e.snap  integration__int__use_command__module_logger_flags_r_t_e_g_G.snap  integration__int__use_command__module_logger_flags_t_e_d_1.snap  integration__int__use_command__module_main_flags_r.snap  integration__int__use_command__module_main_flags_r_t.snap  (+167 more)
tests/int/use_cmd/: mod.rs  test_help.rs  test_overview.rs
tests/int/use_command/: basic_output.rs  bin_only.rs  binaries.rs  custom_path.rs  depth.rs  edge_cases.rs  empty_and_glob.rs  error_cases.rs  flags.rs  include_tests.rs  inline.rs  mod.rs  nesting.rs  overview.rs  own_modules.rs  test_targets.rs  visibility.rs
tests/int/why_command/: basic.rs  bin_only.rs  error_cases.rs  flags.rs  mod.rs  overview.rs
(+700 files in other folders)
