[package]
name = "crawk"
version = "0.1.0"
edition = "2024"
authors = ["Bartosz Cieśla <bartosz.ciesla@gmail.com>"]
repository = "https://github.com/BartoszCiesla/crawk"
homepage = "https://github.com/BartoszCiesla/crawk"
description = "Dependency crawler for Rust. It crawls so you don't have to untangle"
license = "Apache-2.0"
build = "src/build.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
proc-macro2 = "1.0"
const_format = "0.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
owo-colors = "4.2.3"

[build-dependencies]
anyhow = "1.0.100"
vergen-git2 = { version = "9.1.0", features = ["build", "cargo", "rustc", "si"] }

[dev-dependencies]
tempfile = "3.8"
test-case = "3.3.1"
insta-cmd = "0.6.0"
insta = { version = "1.46.3", features = ["filters"] }

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
doc_markdown = "allow"
panic = "deny"

[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = "symbols"
