[package]
name = "crawk"
version = "0.1.0"
edition = "2024"
authors = ["Bartosz Cieśla <bartosz.ciesla@gmail.com>"]
repository = "https://github.com/BartoszCiesla/crawk"
homepage = "https://github.com/BartoszCiesla/crawk"
description = "Dependency crawler for Rust. It crawls so you don't have to untangle"
license = "Apache-2.0"

[features]
default = ["static-build-config"]
static-build-config = []
vergen = ["dep:vergen-git2"]

[dependencies]
anyhow = "1.0.102"
cargo_metadata = "0.23.1"
clap = { version = "4.5", features = ["derive", "cargo"] }
const_format = "0.2"
owo-colors = "4.3.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[build-dependencies]
anyhow = "1.0.102"
vergen-git2 = { version = "9.1.0", features = ["build", "cargo", "rustc", "si"], optional = true }

[dev-dependencies]
insta = { version = "1.46.3", features = ["filters"] }
insta-cmd = "0.6.0"
modules = { path = "fixtures/modules" }
tempfile = "3.26"
test-case = "3.3.1"
# TODO: uncomment when RR fix SIGSEGV build script
# build = "src/build.rs"

[[test]]
# Add an integration test to make sure the snapshot files are generated with the correct names and paths.
# This is important for the crate release process as by default cargo-insta uses not allowed chars in snapshot
# file names, which causes the release process to fail.
name = "integration"
path = "tests/mod.rs"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
doc_markdown = "allow"
panic = "deny"

[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = "symbols"
