[package]
name = "crawk"
version = "0.5.2"
edition = "2024"
rust-version = "1.88.0"
authors = ["Bartosz Cieśla <bartosz.ciesla@gmail.com>"]
repository = "https://github.com/BartoszCiesla/crawk"
homepage = "https://github.com/BartoszCiesla/crawk"
description = "Dependency crawler for Rust. It crawls so you don't have to untangle"
license = "Apache-2.0"
readme = "README.md"
exclude = ["fixtures/", "tests/", ".github/", ".envrc", "justfile"]
keywords = ["rust", "modules", "dependencies", "ast", "analysis"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/{name}-{target}-v{version}{archive-suffix}"
bin-dir = "{bin}{binary-ext}"
pkg-fmt = "tgz"

[dependencies]
anyhow = "1.0.102"
cargo_metadata = "0.23.1"
clap = { version = "4.6", features = ["derive", "cargo"] }
comfy-table = "7.2.2"
const_format = "0.2"
owo-colors = "4.3.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "visit", "proc-macro"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
anyhow = "1.0.102"
vergen-git2 = { version = "9.1.0", features = ["build", "cargo", "rustc", "si"] }

[dev-dependencies]
insta = { version = "1.47.2", features = ["filters"] }
insta-cmd = "0.6.0"
tempfile = "3.27"
test-case = "3.3.1"

[[test]]
# Add an integration test to make sure the snapshot files are generated with the correct names and paths.
# This is important for the crate release process as by default cargo-insta uses not allowed chars in snapshot
# file names, which causes the release process to fail.
name = "integration"
path = "tests/mod.rs"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unreachable_pub = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
doc_markdown = "allow"
panic = "deny"
dbg_macro = "deny"
clone_on_ref_ptr = "deny"
str_to_string = "deny"
redundant_pub_crate = "allow"
todo = "warn"

[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = "symbols"

[profile.fast-build]
inherits = "dev"
opt-level = 0
debug = false
incremental = false
